make line chart

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
         "@radix-ui/react-avatar": "^1.0.3",
         "@radix-ui/react-popover": "1.0.6",
         "@vitejs/plugin-react": "^4.0.3",
+        "chart.js": "^4.3.0",
         "react": "^18.2.0",
+        "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.2.0"
     }
 }
