--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@inertiajs/react": "^1.0.9",
         "@radix-ui/react-aspect-ratio": "^1.0.3",
         "@radix-ui/react-avatar": "^1.0.3",
+        "@radix-ui/react-dropdown-menu": "^2.0.5",
         "@radix-ui/react-popover": "1.0.6",
         "@vitejs/plugin-react": "^4.0.3",
         "chart.js": "^4.3.0",
