--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
         "@inertiajs/inertia-react": "^0.8.1",
         "@inertiajs/react": "^1.0.9",
+        "@mui/icons-material": "^5.14.0",
+        "@mui/material": "^5.14.0",
         "@radix-ui/react-aspect-ratio": "^1.0.3",
         "@radix-ui/react-avatar": "^1.0.3",
         "@radix-ui/react-dropdown-menu": "^2.0.5",
