--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@inertiajs/react": "^1.0.9",
         "@mui/icons-material": "^5.14.0",
         "@mui/material": "^5.14.0",
+        "@radix-ui/react-alert-dialog": "^1.0.4",
         "@radix-ui/react-aspect-ratio": "^1.0.3",
         "@radix-ui/react-avatar": "^1.0.3",
         "@radix-ui/react-dropdown-menu": "^2.0.5",
