--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@inertiajs/react": "^1.0.9",
         "@mui/icons-material": "^5.14.0",
         "@mui/material": "^5.14.0",
+        "@mui/styled-engine-sc": "^5.12.0",
         "@radix-ui/react-alert-dialog": "^1.0.4",
         "@radix-ui/react-aspect-ratio": "^1.0.3",
         "@radix-ui/react-avatar": "^1.0.3",
@@ -30,6 +31,7 @@
         "react": "^18.2.0",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.14.1"
+        "react-router-dom": "^6.14.1",
+        "styled-components": "^5.3.11"
     }
 }
